# dst-prefect-workflows

./: .gitignore  README.md
charts/: nimlibp2p-0.1.0.tgz  waku-0.2.0.tgz  waku-0.3.0.tgz  waku-0.4.0.tgz  waku-0.4.1.tgz  waku-0.4.2.tgz  waku-0.4.3.tgz  waku-0.4.4.tgz  waku-0.4.5.tgz  waku-0.4.6.tgz  waku-deployment-0.2.0.tgz
charts/nimlibp2p/: Chart.yaml  values.yaml
charts/nimlibp2p/templates/: service.yaml  statefulset.yaml
charts/waku/: Chart.yaml  values.yaml
charts/waku/templates/: bootstrap-statefulset.yaml  nodes-service.yaml  nodes-statefulset.yaml  publisher-deployment.yaml
lars/: Cargo.toml  DESIGN.md  README.md  SPEC.md  build.rs  lars_db.sqlite  package-lock.json  package.json
lars/migrations/: 20240402100000_init.sql
lars/src/: main.rs
lars/static/: output.css
lars/templates/: base.html.j2  history.html.j2  index.html.j2
prefect/: README.md  requirements.txt  run.py  scrape.yaml
prefect/analysis/: analyse_waku-100x-1m.py  analyse_waku-200x-1m.py  analyse_waku-300x-1m.py
prefect/simulations/: simulations.json
prefect/test/nwaku0.26-f/libp2p-in/: waku-100-1000mgs-1s-1kb  waku-100-100mgs-10s-1kb  waku-100-200mgs-5s-1kb  waku-200-1000mgs-1s-1kb  waku-200-100mgs-10s-1kb  waku-200-200mgs-5s-1kb  waku-300-1000mgs-1s-1kb  waku-300-100mgs-10s-1kb  waku-300-200mgs-5s-1kb
prefect/test/nwaku0.26-f/libp2p-out/: waku-100-1000mgs-1s-1kb  waku-100-100mgs-10s-1kb  waku-100-200mgs-5s-1kb  waku-200-1000mgs-1s-1kb  waku-200-100mgs-10s-1kb  waku-200-200mgs-5s-1kb  waku-300-1000mgs-1s-1kb  waku-300-100mgs-10s-1kb  (+1 more)
workflows/: waku.yml
